--- a/public/style/global.css
+++ b/public/style/global.css
@@ -4,18 +4,47 @@
 }
 
 :root {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  font-family: Roboto Slab, sans-serif;
   font-size: 16px;
+  line-height: 1.75rem;
   --color-primary-green: #00cc99;
+  --color-secondary-green: #00795a;
   --color-primary-purple: #4e008e;
   --color-primary-black: #000000;
   --color-primary-blue: #166db9;
   --color-text: #fff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Helvetica Neue, sans-serif;
+  font-weight: bold;
+}
+
 main {
   width: 100%;
   min-height: 100vh;
   color: var(--color-text);
+}
+
+@font-face {
+  font-family: 'Roboto Slab';
+  font-style: normal;
+  font-weight: 400;
+  font-display: block;
+  src: local(''),
+    url('../assets/fonts/roboto-slab-v12-latin-regular.woff2') format('woff2'),
+    url('../assets/fonts/roboto-slab-v12-latin-regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  font-style: bold;
+  font-weight: 700;
+  font-display: block;
+  src: local(''), url('../assets/fonts/helvetica-neue.otf') format('otf');
 }
