change title and add favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import * as path from 'node:path';
-let title = 'My Astro Site';
+let title = 'Code.Founders_';
 
 // Create timestamp for deploy previews to show when last built/updated
 const timestamp = process.env.DEPLOY_PREVIEW === 'true' ?
