fix SEO/a11y stuff

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const content = mds.filter(md => path.dirname(md.file.pathname).endsWith('home')
             <div class="hamburger">
                 <div class="hamburger-icon"></div>
             </div>
-            <a class="header-logo" aria-label="home"><img src="/assets/images/logo/logo.png" /></a>
+            <a href="#" class="header-logo" aria-label="home"><img src="/assets/images/logo/logo.png" /></a>
             <div class="search-placeholder"></div>
         </div>
     </header>
@@ -108,13 +108,13 @@ const content = mds.filter(md => path.dirname(md.file.pathname).endsWith('home')
             <img alt="facebook" rel="noopener" target="_blank" src="/assets/images/socials/fb.png" />
         </div>
         <div class="reference-links">
-            <a>Wordt een Code.Founder_</a>
-            <a>Bekijk je docenten</a>
-            <a>Stel je vraag</a>
-            <a>Samenwerken</a>
+            <a href="/contact">Wordt een Code.Founder_</a>
+            <a href="/team">Bekijk je docenten</a>
+            <a href="/contact">Stel je vraag</a>
+            <a href="/contact">Samenwerken</a>
         </div>
-        <a class="footer-logo" aria-label="Home">
-            <img src="/assets/images/logo/mark-green.jpg" />
+        <a href="#" class="footer-logo">
+            <img alt="codefounders logo" src="/assets/images/logo/mark-green.jpg" />
         </a>
     </footer>
 </body>
