fix missing alt attribute

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,9 @@ const pitch = mds.filter(md => path.dirname(md.file.pathname).endsWith('pitch'))
             <div class="hamburger">
                 <div class="hamburger-icon"></div>
             </div>
-            <a href="#" class="header-logo" aria-label="home"><img src="/assets/images/logo/logo.png" /></a>
+            <a href="#" class="header-logo" aria-label="home">
+                <img alt="codefounders logo" src="/assets/images/logo/logo.png" />
+            </a>
             <nav class="nav-desktop">
                 <ul>
                     <li><a href="./diensten">Diensten</a></li>
