--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,9 @@ const pitch = mds.filter(md => path.dirname(md.file.pathname).endsWith('pitch'))
             <div class="founders">
                 {founders.slice(0, 4).map(founder => (
                     <div class="founder">
-                        {founder.astro.html}
+                        <img alt="founder" src={founder.photo} />
+                        <h2>{founder.name}</h2>
+                        <p>{founder.description}</p>
                         <a href="./team">Lees meer reviews</a>
                     </div>
                 ))}
